--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.2.0",
     "gulp-htmlmin": "^5.0.1",
-    "gulp-tinypng-compress": "^1.2.5"
+    "gulp-tinify": "^1.0.2",
+    "gulp-tinypng-compress": "^1.2.5",
+    "tinify": "^1.6.0-beta.2"
   }
 }
